--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -28,3 +28,13 @@
   color: hsl(0, 0%, 0%);
 }
 
+.student{
+  font-family: Arial, sans-serif;
+  font-family: 2em;
+  padding: 10px;
+  border: 1px solid hsla(0, 0%, 50%, 0.8);
+}
+
+.student p{
+  margin: 0;
+}
